[gd_scene load_steps=20 format=2]

[ext_resource path="res://Santa Claus/NP/Test/Child.tscn" type="PackedScene" id=1]
[ext_resource path="res://Santa Claus/NP/Test/SantaClause.tscn" type="PackedScene" id=2]
[ext_resource path="res://Black Bricked TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Santa Claus/NP/Test/Gift.tscn" type="PackedScene" id=5]
[ext_resource path="res://Santa Claus/NP/Level 1/SantaClausPuzzle1.gd" type="Script" id=6]
[ext_resource path="res://Santa Claus/NP/Level 1/SantaClauseLevel1.gd" type="Script" id=7]
[ext_resource path="res://Santa Claus/NP/Test/Gifts.gd" type="Script" id=8]
[ext_resource path="res://Santa Claus/NP/Level 1/Dialogs/Level1.tres" type="Resource" id=9]
[ext_resource path="res://Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://Santa Claus/Sprites/gift3.png" type="Texture" id=11]
[ext_resource path="res://Santa Claus/Sprites/gift2.png" type="Texture" id=12]
[ext_resource path="res://Santa Claus/Sprites/Child3.png" type="Texture" id=13]
[ext_resource path="res://Santa Claus/Sprites/Child2.png" type="Texture" id=14]
[ext_resource path="res://Santa Claus/NP/Test/ChildDisplay.tscn" type="PackedScene" id=15]
[ext_resource path="res://Santa Claus/NP/Test/GiftSlot.tscn" type="PackedScene" id=16]
[ext_resource path="res://Santa Claus/Sprites/pipe.png" type="Texture" id=17]
[ext_resource path="res://Santa Claus/NP/Test/Switch.tscn" type="PackedScene" id=18]
[ext_resource path="res://Santa Claus/NP/Test/Children.gd" type="Script" id=19]

[node name="Level" type="Node2D"]
position = Vector2( 14.042, 0 )
script = ExtResource( 6 )

[node name="Black Bricked TileMap" parent="." instance=ExtResource( 3 )]
position = Vector2( -46.042, 29 )
tile_data = PoolIntArray( -131070, 1, 0, -131069, 1, 1, -131068, 1, 1, -131067, 1, 1, -131066, 1, 1, -131065, 1, 1, -131064, 1, 1, -131063, 1, 1, -131062, 1, 1, -131061, 1, 1, -131060, 1, 1, -131059, 1, 1, -131058, 1, 1, -131057, 1, 1, -131056, 1, 1, -131055, 1, 1, -131054, 1, 1, -131053, 1, 1, -131052, 1, 1, -131051, 1, 1, -131050, 1, 1, -131049, 1, 1, -131048, 1, 1, -131047, 1, 1, -131046, 1, 1, -131045, 1, 1, -131044, 1, 1, -131043, 1, 1, -131042, 1, 1, -131041, 1, 1, -131040, 1, 1, -131039, 1, 1, -131038, 1, 1, -131037, 1, 1, -131036, 1, 1, -131035, 1, 1, -131034, 1, 1, -131033, 1, 1, -131032, 1, 1, -131031, 1, 1, -131030, 1, 1, -131029, 1, 1, -131028, 1, 1, -131027, 1, 1, -131026, 1, 1, -131025, 1, 1, -131024, 1, 1, -131023, 1, 1, -131022, 1, 1, -131021, 1, 1, -131020, 1, 1, -131019, 1, 1, -131018, 1, 1, -131017, 1, 1, -131016, 1, 1, -131015, 1, 1, -131014, 1, 1, -131013, 1, 1, -131012, 1, 1, -131011, 1, 1, -131010, 1, 1, -131009, 1, 1, -131008, 1, 1, -131007, 1, 1, -131006, 1, 2, -65534, 1, 65536, -65533, 1, 65537, -65532, 1, 65537, -65531, 1, 65537, -65530, 1, 65537, -65529, 1, 65537, -65528, 1, 65537, -65527, 1, 65537, -65526, 1, 65537, -65525, 1, 65537, -65524, 1, 65537, -65523, 1, 65537, -65522, 1, 65537, -65521, 1, 65537, -65520, 1, 65537, -65519, 1, 65537, -65518, 1, 65537, -65517, 1, 65537, -65516, 1, 65537, -65515, 1, 65537, -65514, 1, 65537, -65513, 1, 65537, -65512, 1, 65537, -65511, 1, 65537, -65510, 1, 65537, -65509, 1, 65537, -65508, 1, 65537, -65507, 1, 65537, -65506, 1, 65537, -65505, 1, 65537, -65504, 1, 65537, -65503, 1, 65537, -65502, 1, 65537, -65501, 1, 65537, -65500, 1, 65537, -65499, 1, 65537, -65498, 1, 65537, -65497, 1, 65537, -65496, 1, 65537, -65495, 1, 65537, -65494, 1, 65537, -65493, 1, 65537, -65492, 1, 65537, -65491, 1, 65537, -65490, 1, 65537, -65489, 1, 65537, -65488, 1, 65537, -65487, 1, 65537, -65486, 1, 65537, -65485, 1, 65537, -65484, 1, 65537, -65483, 1, 65537, -65482, 1, 65537, -65481, 1, 65537, -65480, 1, 65537, -65479, 1, 65537, -65478, 1, 65537, -65477, 1, 65537, -65476, 1, 65537, -65475, 1, 65537, -65474, 1, 65537, -65473, 1, 65537, -65472, 1, 65537, -65471, 1, 65537, -65470, 1, 65538, 2, 1, 65536, 3, 1, 65537, 4, 1, 65537, 5, 1, 65541, 6, 1, 131073, 7, 1, 131073, 8, 1, 131073, 9, 1, 131073, 10, 1, 131073, 11, 1, 131073, 12, 1, 131073, 13, 1, 131073, 14, 1, 131073, 15, 1, 131073, 16, 1, 131073, 17, 1, 131073, 18, 1, 131073, 19, 1, 131073, 20, 1, 131073, 21, 1, 65542, 22, 1, 65541, 23, 1, 131073, 24, 1, 131073, 25, 1, 131073, 26, 1, 131073, 27, 1, 131073, 28, 1, 131073, 29, 1, 131073, 30, 1, 131073, 31, 1, 131073, 32, 1, 131073, 33, 1, 131073, 34, 1, 131073, 35, 1, 131073, 36, 1, 131073, 37, 1, 131073, 38, 1, 131073, 39, 1, 131073, 40, 1, 131073, 41, 1, 131073, 42, 1, 131073, 43, 1, 131073, 44, 1, 131073, 45, 1, 131073, 46, 1, 131073, 47, 1, 131073, 48, 1, 131073, 49, 1, 131073, 50, 1, 131073, 51, 1, 131073, 52, 1, 131073, 53, 1, 131073, 54, 1, 131073, 55, 1, 131073, 56, 1, 131073, 57, 1, 131073, 58, 1, 131073, 59, 1, 131073, 60, 1, 65542, 61, 1, 65537, 62, 1, 65541, 63, 1, 131073, 64, 1, 131073, 65, 1, 131073, 66, 1, 131074, 65538, 1, 65536, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65538, 65557, 1, 65536, 65558, 1, 65538, 65596, 1, 65536, 65597, 1, 65537, 65598, 1, 65538, 131074, 1, 65536, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65538, 131093, 1, 65536, 131094, 1, 65538, 131132, 1, 65536, 131133, 1, 65537, 131134, 1, 65538, 196610, 1, 65536, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65538, 196629, 1, 65536, 196630, 1, 65538, 196668, 1, 65536, 196669, 1, 65537, 196670, 1, 65538, 262146, 1, 65536, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65538, 262165, 1, 65536, 262166, 1, 65538, 262204, 1, 65536, 262205, 1, 65537, 262206, 1, 65538, 327682, 1, 65536, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65538, 327701, 1, 65536, 327702, 1, 65538, 327740, 1, 65536, 327741, 1, 65537, 327742, 1, 65538, 393218, 1, 65536, 393219, 1, 65537, 393220, 1, 65537, 393221, 1, 65538, 393237, 1, 65536, 393238, 1, 65538, 393276, 1, 65536, 393277, 1, 65537, 393278, 1, 65538, 458754, 1, 65536, 458755, 1, 65537, 458756, 1, 65537, 458757, 1, 65538, 458773, 1, 131072, 458774, 1, 131074, 458812, 1, 131072, 458813, 1, 131073, 458814, 1, 131074, 524290, 1, 65536, 524291, 1, 65537, 524292, 1, 65537, 524293, 1, 65538, 589826, 1, 65536, 589827, 1, 65537, 589828, 1, 65537, 589829, 1, 65538, 655362, 1, 65536, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65538, 720898, 1, 65536, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 65538, 786434, 1, 65536, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 131077, 786438, 1, 1, 786439, 1, 1, 786440, 1, 1, 786441, 1, 1, 786442, 1, 1, 786443, 1, 1, 786444, 1, 1, 786445, 1, 1, 786446, 1, 1, 786447, 1, 1, 786448, 1, 1, 786449, 1, 1, 786450, 1, 1, 786451, 1, 1, 786452, 1, 1, 786453, 1, 1, 786454, 1, 1, 786455, 1, 1, 786456, 1, 1, 786457, 1, 1, 786458, 1, 1, 786459, 1, 1, 786460, 1, 1, 786461, 1, 1, 786462, 1, 1, 786463, 1, 1, 786464, 1, 1, 786465, 1, 1, 786466, 1, 1, 786467, 1, 1, 786468, 1, 1, 786469, 1, 1, 786470, 1, 1, 786471, 1, 1, 786472, 1, 1, 786473, 1, 1, 786474, 1, 1, 786475, 1, 1, 786476, 1, 1, 786477, 1, 1, 786478, 1, 1, 786479, 1, 1, 786480, 1, 1, 786481, 1, 1, 786482, 1, 1, 786483, 1, 1, 786484, 1, 1, 786485, 1, 1, 786486, 1, 1, 786487, 1, 1, 786488, 1, 1, 786489, 1, 1, 786490, 1, 1, 786491, 1, 1, 786492, 1, 1, 786493, 1, 1, 786494, 1, 1, 786495, 1, 1, 786496, 1, 1, 786497, 1, 1, 786498, 1, 2, 851970, 1, 65536, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65537, 851981, 1, 65537, 851982, 1, 65537, 851983, 1, 65537, 851984, 1, 65537, 851985, 1, 65537, 851986, 1, 65537, 851987, 1, 65537, 851988, 1, 65537, 851989, 1, 65537, 851990, 1, 65537, 851991, 1, 65537, 851992, 1, 65537, 851993, 1, 65537, 851994, 1, 65537, 851995, 1, 65537, 851996, 1, 65537, 851997, 1, 65537, 851998, 1, 65537, 851999, 1, 65537, 852000, 1, 65537, 852001, 1, 65537, 852002, 1, 65537, 852003, 1, 65537, 852004, 1, 65537, 852005, 1, 65537, 852006, 1, 65537, 852007, 1, 65537, 852008, 1, 65537, 852009, 1, 65537, 852010, 1, 65537, 852011, 1, 65537, 852012, 1, 65537, 852013, 1, 65537, 852014, 1, 65537, 852015, 1, 65537, 852016, 1, 65537, 852017, 1, 65537, 852018, 1, 65537, 852019, 1, 65537, 852020, 1, 65537, 852021, 1, 65537, 852022, 1, 65537, 852023, 1, 65537, 852024, 1, 65537, 852025, 1, 65537, 852026, 1, 65537, 852027, 1, 65537, 852028, 1, 65537, 852029, 1, 65537, 852030, 1, 65537, 852031, 1, 65537, 852032, 1, 65537, 852033, 1, 65537, 852034, 1, 65538, 917506, 1, 65536, 917507, 1, 65537, 917508, 1, 65537, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65537, 917517, 1, 65537, 917518, 1, 65537, 917519, 1, 65537, 917520, 1, 65537, 917521, 1, 65537, 917522, 1, 65537, 917523, 1, 65537, 917524, 1, 65537, 917525, 1, 65537, 917526, 1, 65537, 917527, 1, 65537, 917528, 1, 65537, 917529, 1, 65537, 917530, 1, 65537, 917531, 1, 65537, 917532, 1, 65537, 917533, 1, 65537, 917534, 1, 65537, 917535, 1, 65537, 917536, 1, 65537, 917537, 1, 65537, 917538, 1, 65537, 917539, 1, 65537, 917540, 1, 65537, 917541, 1, 65537, 917542, 1, 65537, 917543, 1, 65537, 917544, 1, 65537, 917545, 1, 65537, 917546, 1, 65537, 917547, 1, 65537, 917548, 1, 65537, 917549, 1, 65537, 917550, 1, 65537, 917551, 1, 65537, 917552, 1, 65537, 917553, 1, 65537, 917554, 1, 65537, 917555, 1, 65537, 917556, 1, 65537, 917557, 1, 65537, 917558, 1, 65537, 917559, 1, 65537, 917560, 1, 65537, 917561, 1, 65537, 917562, 1, 65537, 917563, 1, 65537, 917564, 1, 65537, 917565, 1, 65537, 917566, 1, 65537, 917567, 1, 65537, 917568, 1, 65537, 917569, 1, 65537, 917570, 1, 65538, 983042, 1, 131072, 983043, 1, 131073, 983044, 1, 131073, 983045, 1, 131073, 983046, 1, 131073, 983047, 1, 131073, 983048, 1, 131073, 983049, 1, 131073, 983050, 1, 131073, 983051, 1, 131073, 983052, 1, 131073, 983053, 1, 131073, 983054, 1, 131073, 983055, 1, 131073, 983056, 1, 131073, 983057, 1, 131073, 983058, 1, 131073, 983059, 1, 131073, 983060, 1, 131073, 983061, 1, 131073, 983062, 1, 131073, 983063, 1, 131073, 983064, 1, 131073, 983065, 1, 131073, 983066, 1, 131073, 983067, 1, 131073, 983068, 1, 131073, 983069, 1, 131073, 983070, 1, 131073, 983071, 1, 131073, 983072, 1, 131073, 983073, 1, 131073, 983074, 1, 131073, 983075, 1, 131073, 983076, 1, 131073, 983077, 1, 131073, 983078, 1, 131073, 983079, 1, 131073, 983080, 1, 131073, 983081, 1, 131073, 983082, 1, 131073, 983083, 1, 131073, 983084, 1, 131073, 983085, 1, 131073, 983086, 1, 131073, 983087, 1, 131073, 983088, 1, 131073, 983089, 1, 131073, 983090, 1, 131073, 983091, 1, 131073, 983092, 1, 131073, 983093, 1, 131073, 983094, 1, 131073, 983095, 1, 131073, 983096, 1, 131073, 983097, 1, 131073, 983098, 1, 131073, 983099, 1, 131073, 983100, 1, 131073, 983101, 1, 131073, 983102, 1, 131073, 983103, 1, 131073, 983104, 1, 131073, 983105, 1, 131073, 983106, 1, 131074 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 97.958, 205 )

[node name="SantaClaus" parent="." instance=ExtResource( 2 )]
position = Vector2( 158.958, 188 )
script = ExtResource( 7 )
dialogs = [ ExtResource( 9 ) ]

[node name="Door" parent="." instance=ExtResource( 10 )]
position = Vector2( 294.958, 189 )

[node name="Door2" parent="." instance=ExtResource( 10 )]
position = Vector2( 919.96, 189 )

[node name="TransportSwitch" parent="." instance=ExtResource( 18 )]
position = Vector2( 633.958, 202 )

[node name="ChildDisplay" parent="." instance=ExtResource( 15 )]
position = Vector2( 513.958, 168 )

[node name="Gifts" type="Node2D" parent="."]
position = Vector2( -80, 0 )
script = ExtResource( 8 )

[node name="Gift1" parent="Gifts" instance=ExtResource( 5 )]
position = Vector2( 446.958, 209 )
gift_index = 0
gift_values = [ 23, 2, 1 ]

[node name="Gift2" parent="Gifts" instance=ExtResource( 5 )]
position = Vector2( 482.958, 206 )
sprite = ExtResource( 12 )
gift_index = 1
gift_values = [ 1, 42, 45 ]

[node name="Gift3" parent="Gifts" instance=ExtResource( 5 )]
position = Vector2( 518.958, 208 )
sprite = ExtResource( 11 )
gift_index = 2
gift_values = [ 6, 5, 6 ]

[node name="Children" type="Node2D" parent="."]
position = Vector2( -81, 0 )
script = ExtResource( 19 )
threshold = 6

[node name="Child1" parent="Children" instance=ExtResource( 1 )]
position = Vector2( 832.958, 205 )
child_index = 0

[node name="Child2" parent="Children" instance=ExtResource( 1 )]
position = Vector2( 888.958, 205 )
child_index = 1
sprite = ExtResource( 14 )

[node name="Child3" parent="Children" instance=ExtResource( 1 )]
position = Vector2( 941.958, 206 )
child_index = 2
sprite = ExtResource( 13 )

[node name="GiftSlots" type="Node2D" parent="."]
position = Vector2( -80, 0 )

[node name="GiftSlot" parent="GiftSlots" instance=ExtResource( 16 )]
position = Vector2( 446.958, 209 )
gift_path = NodePath("../../Gifts/Gift1")

[node name="GiftSlot2" parent="GiftSlots" instance=ExtResource( 16 )]
position = Vector2( 482.958, 209 )
gift_path = NodePath("../../Gifts/Gift2")

[node name="GiftSlot3" parent="GiftSlots" instance=ExtResource( 16 )]
position = Vector2( 518.958, 209 )
gift_path = NodePath("../../Gifts/Gift3")

[node name="GiftPlatform" parent="GiftSlots" instance=ExtResource( 16 )]
position = Vector2( 669.958, 203 )
texture = ExtResource( 17 )
offset = Vector2( 0, -22 )
offset = Vector2( 0, -22 )
